--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Iterable Campaign Naming</title>
+  <title>Iterable Suppression List Selector</title>
   <meta name="robots" content="noindex">
   <meta name="description" content="">
   <meta name="author" content="">
