adding warning label

--- a/index.html
+++ b/index.html
@@ -194,6 +194,14 @@
 
     <!-- end button row -->
 
+<!-- Alert -->
+<div class="row hide" id="warningDiv" >
+  <div class="nine columns" style="padding-top: 10px;">
+    <div><span class="h3"><b>Please make sure to apply all lists, not just the first one.</b></span>
+      </div>
+    </div>
+</div>
+
 
 <!-- List section-->
 
